[package]
name = "lightguide"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lightguide"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.16.2"
ndarray = "0.15.4"
rayon = "1.5.3"
fftw = { git = "https://github.com/miili/fftw" }

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]
