[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "lightguide"
description = "Tools for distributed acoustic sensing and modelling."
requires-python = ">=3.8"
authors = [
    {name = "Marius Paul Isken"},
    {email = "mi@gfz-potsdam.de"}
]
keywords = ["distributed acoustic sensing", "DAS", "seismology", "earthquake modelling"]
license = {file = "LICENSE"}
dependencies = ["pyrocko>=2022.4.28", "numpy>=1.20.0", "requests>=2.20.0"]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Home = "https://pyrocko.org"
GitHub = "https://github.com/pyrocko/lightguide"
Issues = "https://github.com/pyrocko/lightguide/issues"

[project.optional-dependencies]
formating = ["flake8", "black"]
tests = ["pytest-benchmark", "pytest"]
