[build-system]
requires = [
  "maturin>=0.14,<0.15",
  "setuptools_scm[toml]>=6.2",
  "setuptools-rust",
]
build-backend = "maturin"

[project]
name = "lightguide"
description = "Tools for distributed acoustic sensing and modelling."
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{ name = "Marius Paul Isken" }, { email = "mi@gfz-potsdam.de" }]
keywords = [
  "distributed acoustic sensing",
  "DAS",
  "seismology",
  "earthquake modelling",
]
license = { file = "LICENSE" }
dependencies = ["pyrocko>=2022.4.28", "numpy>=1.20.0", "requests>=2.20.0"]
readme = "README.md"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Home = "https://pyrocko.org"
GitHub = "https://github.com/pyrocko/lightguide"
Issues = "https://github.com/pyrocko/lightguide/issues"

[project.optional-dependencies]
dev = ["ruff>=0.250", "black>=23.0.0", "isort", "pytest-benchmark", "pytest"]
docs = [
  "myst-nb>=0.17.1",
  # "sphinx>=6.1.3",
  "semver>=3.0.0",
  "furo>=2023.3.27",
  "sphinx-copybutton>=0.5.1",
  "sphinx-design>=0.4.1",
]

[tool.ruff]
select = ['E', 'F', 'W', 'N', 'B', 'DTZ', 'G', 'RET', 'SIM', 'NPY']
exclude = ["doc/source/conf.py"]
